--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+    
         {
-            "type": "msedge",
+            "name": "Launch Edge",
             "request": "launch",
-            "name": "Launch Edge against localhost",
+            "type": "msedge",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
         }
+
+
     ]
 }
