--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.5",
+    "update": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
