--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "fortawesome": "^0.0.1-security",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
